--- a/build.yaml
+++ b/build.yaml
@@ -1,20 +1,21 @@
 include:
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: sofle_left
     artifact-name: sofle_left
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: sofle_right
     artifact-name: sofle_right
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
-  - board: nice_nano_v2
+  - board: nice_nano
     # shield: sofle_dongle nice_view_adapter nice_view azoteq_adapter_left
     shield: sofle_dongle nice_view_adapter dongle_display_view_pro_micro
     snippet: studio-rpc-usb-uart
     artifact-name: sofle_dongle
     cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
 
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: settings_reset
+
