--- a/config/sofle_left.conf
+++ b/config/sofle_left.conf
@@ -2,8 +2,8 @@
 CONFIG_ZMK_USB=n
 
 # Increase range
-CONFIG_BT_CTLR_PHY_2M=n
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+#CONFIG_BT_CTLR_PHY_2M=n
+#CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Enable EC11 encoders
 CONFIG_EC11=y
