--- a/config/sofle_right.conf
+++ b/config/sofle_right.conf
@@ -8,3 +8,8 @@ CONFIG_ZMK_USB=n
 # Enable EC11 encoders
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+
+# assige a source id on peripheral. (no need for central)
+# default zero. give an integer (<256) on all peripheral(s)
+CONFIG_ZMK_SPLIT_ESB_PERIPHERAL_ID=0
