--- a/boards/shields/sofle/sofle_right.conf
+++ b/boards/shields/sofle/sofle_right.conf
@@ -46,4 +46,4 @@ CONFIG_ZMK_INPUT_MOUSE_PS2_ENABLE_CRASH_RECOVERY=y
 # CONFIG_ZMK_LOG_LEVEL_INF=y
 
 # Report battery level to central (dongle)
-# CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_BATTERY_REPORTING=y
