--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -47,15 +47,24 @@ CONFIG_ESB_TX_FIFO_SIZE=1
 # Logging!
 # CONFIG_ZMK_SPLIT_ESB_LOG_LEVEL_DBG=y
 
+CONFIG_ZMK_USB_LOGGING=n
+CONFIG_ZMK_LOGGING_MINIMAL=n
+CONFIG_LOG_MODE_IMMEDIATE=n
+
+# This setting is important to get the full log instead of
+# one where the initial parts are cut out
+# CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=3000
+
+
 # for battery reporting on RX
 # NOTE: CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS is valid for ESB-only, even its look like a BLE-only config.
 # NOTE: central will not advertise to any BLE host if ble_profile_count is zero.
 #       with simple math:
 #       ZMK_BLE_PROFILE_COUNT = (CONFIG_BT_MAX_PAIRED - CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS)
-CONFIG_ZMK_BATTERY_REPORTING=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
-CONFIG_BT_MAX_PAIRED=2
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
+# CONFIG_ZMK_BATTERY_REPORTING=y
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+# CONFIG_BT_MAX_PAIRED=2
+# CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
 # for battery reporting on TX
 CONFIG_ZMK_BATTERY_REPORTING=n
