--- a/config/west.yml
+++ b/config/west.yml
@@ -27,7 +27,7 @@ manifest:
       revision: main
     - name: zmk-feature-split-esb
       remote: badjeff
-      revision: main
+      revision: core/move-to-zephyr-4-1
     - name: sdk-nrf
       remote: badjeff
       revision: v3.1-branch+zmk-fixes
@@ -39,6 +39,7 @@ manifest:
       path: nrfxlib
   self:
     path: config
+
 
 
 
