--- a/config/west.yml
+++ b/config/west.yml
@@ -1,33 +1,29 @@
 manifest:
   remotes:
-    - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
-      # https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
-    - name: mctechnology17
-      url-base: https://github.com/mctechnology17
+    # - name: zmkfirmware
+    #   url-base: https://github.com/zmkfirmware
+    # - name: nrfconnect
+    #   url-base: https://github.com/nrfconnect
+    # - name: petejohanson
+    #   url-base: https://github.com/petejohanson
     - name: badjeff
       url-base: https://github.com/badjeff
-    - name: mwlaboratories
-      url-base: https://github.com/mwlaboratories
-    - name: nrfconnect
-      url-base: https://github.com/nrfconnect
+      
   projects:
     - name: zmk
-      remote: zmkfirmware
+      remote: badjeff
       revision: main
       import: app/west.yml
-    - name: azoteq-input-module # <-- enable the drivers
-      remote: mctechnology17
-      revision: main
-    - name: zmk-azoteq-adapter # <-- enable this module
-      remote: mctechnology17
-      revision: main
-    - name: kb_zmk_ps2_mouse_trackpoint_driver
-      remote: mwlaboratories
-      revision: main
-    - name: zmk-feature-split-esb
+    #- name: azoteq-input-module # <-- enable the drivers
+    #  remote: mctechnology17
+    #  revision: main
+    #- name: zmk-azoteq-adapter # <-- enable this module
+    #  remote: mctechnology17
+    #  revision: main
+    - name: zmk-adns9800-driver
       remote: badjeff
-      revision: core/move-to-zephyr-4-1
+      revision: main
+
     - name: sdk-nrf
       remote: badjeff
       revision: v3.1-branch+zmk-fixes
@@ -37,8 +33,114 @@ manifest:
       revision: v3.1-branch
       repo-path: sdk-nrfxlib
       path: nrfxlib
+    - name: zmk-feature-split-esb
+      remote: badjeff
+      # revision: main
+      revision: core/move-to-zephyr-4-1
+
+    - name: zmk-pmw3610-driver
+      remote: badjeff
+      revision: main
+      # revision: zmk-0.4
+
+    - name: zmk-paw3395-driver
+      remote: badjeff
+      revision: main
+
+    - name: zmk-analog-input-driver
+      remote: badjeff
+      revision: main
+
+    - name: zmk-behavior-battery-percentage-printer
+      remote: badjeff
+      revision: main
+
+    - name: zmk-behavior-insomnia
+      remote: badjeff
+      revision: main
+
+    - name: zmk-behavior-key-press-lip
+      remote: badjeff
+      revision: main
+
+    - name: zmk-behavior-key-tempo
+      remote: badjeff
+      revision: main
+
+    - name: zmk-behavior-mouse-key-toggle
+      remote: badjeff
+      revision: main
+
+     - name: zmk-input-behavior-listener
+       remote: badjeff
+       revision: main
+
+    - name: zmk-output-behavior-listener
+      remote: badjeff
+      revision: main
+
+     - name: zmk-hid-io
+       remote: badjeff
+       revision: main
+
+     - name: zmk-split-peripheral-input-relay
+       remote: badjeff
+       revision: main
+
+     - name: zmk-split-peripheral-output-relay
+       remote: badjeff
+       revision: main
+
+    - name: zmk-split-peripheral-bonding-tweak
+      remote: badjeff
+      revision: main
+
+    - name: zmk-drv2605-driver
+      remote: badjeff
+      revision: main
+
+    - name: zmk-drv883x-driver
+      remote: badjeff
+      revision: main
+
+    - name: zmk-tb6612fng-driver
+      remote: badjeff
+      revision: main
+
+    - name: zmk-kscan-blackout
+      remote: badjeff
+      revision: main
+
+    # - name: zmk-input-processor-mixer
+    #   remote: badjeff
+    #   revision: main
+
+    - name: zmk-input-processor-report-rate-limit
+      remote: badjeff
+      revision: main
+
+    - name: zmk-input-processor-xyz
+      remote: badjeff
+      revision: main
+
+     - name: zmk-behavior-set-default-layer
+       remote: badjeff
+       revision: main
+
+    - name: kb_zmk_ps2_mouse_trackpoint_driver
+      remote: badjeff
+      revision: main
+
+    - name: cirque-input-module
+      remote: badjeff
+      revision: tweak
+
+    - name: prospector-zmk-module
+      remote: badjeff
+      revision: 1-47-inch-panel
   self:
     path: config
+
 
 
 
