--- a/config/west.yml
+++ b/config/west.yml
@@ -8,35 +8,39 @@ manifest:
     #   url-base: https://github.com/petejohanson
     - name: badjeff
       url-base: https://github.com/badjeff
-      
+
   projects:
+
+    # - name: zmk
+    #   remote: zmkfirmware
+    #   revision: main
+    #   import: app/west.yml
+    # - name: zmk
+    #   remote: petejohanson
+    #   revision: core/move-to-zephyr-4-1
+    #   import: app/west.yml
     - name: zmk
       remote: badjeff
       revision: main
       import: app/west.yml
-    #- name: azoteq-input-module # <-- enable the drivers
-    #  remote: mctechnology17
-    #  revision: main
-    #- name: zmk-azoteq-adapter # <-- enable this module
-    #  remote: mctechnology17
-    #  revision: main
+
+    # - name: sdk-nrf
+    #   remote: badjeff
+    #   revision: v3.1-branch+zmk-fixes
+    #   path: nrf
+    # - name: nrfxlib
+    #   remote: nrfconnect
+    #   revision: v3.1-branch
+    #   repo-path: sdk-nrfxlib
+    #   path: nrfxlib
+    # - name: zmk-feature-split-esb
+    #   remote: badjeff
+    #   # revision: main
+    #   revision: core/move-to-zephyr-4-1
+
     - name: zmk-adns9800-driver
       remote: badjeff
       revision: main
-
-    - name: sdk-nrf
-      remote: badjeff
-      revision: v3.1-branch+zmk-fixes
-      path: nrf
-    - name: nrfxlib
-      remote: nrfconnect
-      revision: v3.1-branch
-      repo-path: sdk-nrfxlib
-      path: nrfxlib
-    - name: zmk-feature-split-esb
-      remote: badjeff
-      # revision: main
-      revision: core/move-to-zephyr-4-1
 
     - name: zmk-pmw3610-driver
       remote: badjeff
@@ -71,25 +75,25 @@ manifest:
       remote: badjeff
       revision: main
 
-     - name: zmk-input-behavior-listener
-       remote: badjeff
-       revision: main
+    # - name: zmk-input-behavior-listener
+    #   remote: badjeff
+    #   revision: main
 
     - name: zmk-output-behavior-listener
       remote: badjeff
       revision: main
 
-     - name: zmk-hid-io
-       remote: badjeff
-       revision: main
+    # - name: zmk-hid-io
+    #   remote: badjeff
+    #   revision: main
 
-     - name: zmk-split-peripheral-input-relay
-       remote: badjeff
-       revision: main
+    # - name: zmk-split-peripheral-input-relay
+    #   remote: badjeff
+    #   revision: main
 
-     - name: zmk-split-peripheral-output-relay
-       remote: badjeff
-       revision: main
+    # - name: zmk-split-peripheral-output-relay
+    #   remote: badjeff
+    #   revision: main
 
     - name: zmk-split-peripheral-bonding-tweak
       remote: badjeff
@@ -123,9 +127,9 @@ manifest:
       remote: badjeff
       revision: main
 
-     - name: zmk-behavior-set-default-layer
-       remote: badjeff
-       revision: main
+    # - name: zmk-behavior-set-default-layer
+    #   remote: badjeff
+    #   revision: main
 
     - name: kb_zmk_ps2_mouse_trackpoint_driver
       remote: badjeff
@@ -138,10 +142,6 @@ manifest:
     - name: prospector-zmk-module
       remote: badjeff
       revision: 1-47-inch-panel
+
   self:
     path: config
-
-
-
-
-
