--- a/config/sofle_left.conf
+++ b/config/sofle_left.conf
@@ -13,3 +13,9 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 # assige a source id on peripheral. (no need for central)
 # default zero. give an integer (<256) on all peripheral(s)
 CONFIG_ZMK_SPLIT_ESB_PERIPHERAL_ID=1
+
+# Force right side to be peripheral (not central)
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+
+# Report battery level to central (dongle)
+CONFIG_ZMK_BATTERY_REPORTING=n
