--- a/config/sofle_right.conf
+++ b/config/sofle_right.conf
@@ -9,7 +9,47 @@ CONFIG_ZMK_USB=n
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
+# Force left side to be peripheral (not central)
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 
-# assige a source id on peripheral. (no need for central)
-# default zero. give an integer (<256) on all peripheral(s)
+
+
+
+
+# Force right side to be peripheral (not central)
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+
 CONFIG_ZMK_SPLIT_ESB_PERIPHERAL_ID=2
+
+# Enable NFC pins as GPIO (for trackpoint reset on P0.10)
+# CONFIG_NFCT_PINS_AS_GPIOS=y
+
+# Enable pointing/mouse support for trackpoint
+CONFIG_ZMK_POINTING=y
+CONFIG_INPUT=y
+CONFIG_GPIO=y
+
+# UART-based PS/2 driver config
+CONFIG_UART_INTERRUPT_DRIVEN=y
+
+# Enable automatic crash recovery using the reset pin
+# Triggers after 15 consecutive errors, 30s cooldown between attempts
+CONFIG_ZMK_INPUT_MOUSE_PS2_ENABLE_CRASH_RECOVERY=y
+
+# USB Logging (re-enabled for crash debugging)
+# CONFIG_ZMK_USB_LOGGING=y
+# CONFIG_LOG=y
+# CONFIG_USB_CDC_ACM=y
+# CONFIG_SERIAL=y
+# CONFIG_CONSOLE=y
+# CONFIG_UART_CONSOLE=y
+# CONFIG_UART_LINE_CTRL=y
+
+# PS2/Trackpoint logging - WRN level for crash debugging
+# CONFIG_PS2_LOG_LEVEL_WRN=y
+# CONFIG_INPUT_LOG_LEVEL_WRN=y
+# CONFIG_UART_LOG_LEVEL_WRN=y
+# CONFIG_ZMK_LOG_LEVEL_INF=y
+
+# Report battery level to central (dongle)
+CONFIG_ZMK_BATTERY_REPORTING=y
