--- a/config/sofle_dongle.conf
+++ b/config/sofle_dongle.conf
@@ -13,3 +13,6 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 # CONFIG_INPUT_AZOTEQ_IQS5XX=y
 # CONFIG_ZMK_INPUT_AZOTEQ_IQS5XX_IDLE_SLEEPER=y
 # CONFIG_INPUT_AZOTEQ_IQS5XX_INIT_PRIORITY=60
+
+# Enable pointing/mouse support to receive trackpoint events and generate HID reports
+CONFIG_ZMK_POINTING=y
