--- a/config/sofle_right.conf
+++ b/config/sofle_right.conf
@@ -31,6 +31,8 @@ CONFIG_GPIO=y
 
 # UART-based PS/2 driver config
 CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_PS2_UART_WRITE_MODE_BLOCKING=y
+CONFIG_ZMK_INPUT_MOUSE_PS2_POWER_ON_RESET_TIME=1900
 
 # Enable automatic crash recovery using the reset pin
 # Triggers after 15 consecutive errors, 30s cooldown between attempts
@@ -42,8 +44,8 @@ CONFIG_ZMK_INPUT_MOUSE_PS2_ENABLE_CRASH_RECOVERY=y
 # CONFIG_USB_CDC_ACM=y
 # CONFIG_SERIAL=y
 # CONFIG_CONSOLE=y
-# CONFIG_UART_CONSOLE=y
-# CONFIG_UART_LINE_CTRL=y
+CONFIG_UART_CONSOLE=y
+CONFIG_UART_LINE_CTRL=y
 
 # PS2/Trackpoint logging - WRN level for crash debugging
 # CONFIG_PS2_LOG_LEVEL_WRN=y
