--- a/build.yaml
+++ b/build.yaml
@@ -12,11 +12,12 @@ include:
   - board: nice_nano
     # shield: sofle_dongle nice_view_adapter nice_view azoteq_adapter_left
     shield: sofle_dongle
-    snippet: studio-rpc-usb-uart
+    #snippet: studio-rpc-usb-uart
     artifact-name: sofle_dongle
-    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
+    #cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
 
   - board: nice_nano
     shield: settings_reset
+
 
 
