--- a/config/west.yml
+++ b/config/west.yml
@@ -24,32 +24,34 @@ manifest:
       revision: main
       import: app/west.yml
 
-    # - name: sdk-nrf
-    #   remote: badjeff
-    #   revision: v3.1-branch+zmk-fixes
-    #   path: nrf
-    # - name: nrfxlib
-    #   remote: nrfconnect
-    #   revision: v3.1-branch
-    #   repo-path: sdk-nrfxlib
-    #   path: nrfxlib
-    # - name: zmk-feature-split-esb
-    #   remote: badjeff
-    #   # revision: main
-    #   revision: core/move-to-zephyr-4-1
+      
+
+    - name: sdk-nrf
+      remote: badjeff
+      revision: v3.1-branch+zmk-fixes
+      path: nrf
+    - name: nrfxlib
+      remote: nrfconnect
+      revision: v3.1-branch
+      repo-path: sdk-nrfxlib
+      path: nrfxlib
+    - name: zmk-feature-split-esb
+      remote: badjeff
+      # revision: main
+      revision: core/move-to-zephyr-4-1
 
     - name: zmk-adns9800-driver
       remote: badjeff
       revision: main
 
-    - name: zmk-pmw3610-driver
-      remote: badjeff
-      revision: main
+    #- name: zmk-pmw3610-driver
+    #  remote: badjeff
+    #  revision: main
       # revision: zmk-0.4
 
-    - name: zmk-paw3395-driver
-      remote: badjeff
-      revision: main
+    #- name: zmk-paw3395-driver
+    #  remote: badjeff
+    #  revision: main
 
     - name: zmk-analog-input-driver
       remote: badjeff
@@ -83,17 +85,17 @@ manifest:
       remote: badjeff
       revision: main
 
-    # - name: zmk-hid-io
-    #   remote: badjeff
-    #   revision: main
+    - name: zmk-hid-io
+      remote: badjeff
+      revision: main
 
-    # - name: zmk-split-peripheral-input-relay
-    #   remote: badjeff
-    #   revision: main
+    - name: zmk-split-peripheral-input-relay
+      remote: badjeff
+      revision: main
 
-    # - name: zmk-split-peripheral-output-relay
-    #   remote: badjeff
-    #   revision: main
+    - name: zmk-split-peripheral-output-relay
+      remote: badjeff
+      revision: main
 
     - name: zmk-split-peripheral-bonding-tweak
       remote: badjeff
@@ -115,9 +117,9 @@ manifest:
       remote: badjeff
       revision: main
 
-    # - name: zmk-input-processor-mixer
-    #   remote: badjeff
-    #   revision: main
+    - name: zmk-input-processor-mixer
+      remote: badjeff
+      revision: main
 
     - name: zmk-input-processor-report-rate-limit
       remote: badjeff
@@ -127,9 +129,9 @@ manifest:
       remote: badjeff
       revision: main
 
-    # - name: zmk-behavior-set-default-layer
-    #   remote: badjeff
-    #   revision: main
+    - name: zmk-behavior-set-default-layer
+      remote: badjeff
+      revision: main
 
     - name: kb_zmk_ps2_mouse_trackpoint_driver
       remote: badjeff
@@ -145,4 +147,5 @@ manifest:
 
   self:
     path: config
+
 
