--- a/config/sofle_right.conf
+++ b/config/sofle_right.conf
@@ -30,9 +30,9 @@ CONFIG_INPUT=y
 CONFIG_GPIO=y
 
 # UART-based PS/2 driver config
-CONFIG_UART_INTERRUPT_DRIVEN=y
-CONFIG_PS2_UART_WRITE_MODE_BLOCKING=y
-CONFIG_ZMK_INPUT_MOUSE_PS2_POWER_ON_RESET_TIME=1900
+#CONFIG_UART_INTERRUPT_DRIVEN=y
+#CONFIG_PS2_UART_WRITE_MODE_BLOCKING=y
+#CONFIG_ZMK_INPUT_MOUSE_PS2_POWER_ON_RESET_TIME=1900
 
 # Enable automatic crash recovery using the reset pin
 # Triggers after 15 consecutive errors, 30s cooldown between attempts
