--- a/config/sofle_right.conf
+++ b/config/sofle_right.conf
@@ -44,8 +44,8 @@ CONFIG_ZMK_INPUT_MOUSE_PS2_ENABLE_CRASH_RECOVERY=y
 # CONFIG_USB_CDC_ACM=y
 # CONFIG_SERIAL=y
 # CONFIG_CONSOLE=y
-CONFIG_UART_CONSOLE=y
-CONFIG_UART_LINE_CTRL=y
+#CONFIG_UART_CONSOLE=y
+#CONFIG_UART_LINE_CTRL=y
 
 # PS2/Trackpoint logging - WRN level for crash debugging
 # CONFIG_PS2_LOG_LEVEL_WRN=y
