--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,6 @@
-name: Build ZMK firmware
+name: Build firmware
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
-    # uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
-    # uses: petejohanson/zmk/.github/workflows/build-user-config.yml@core/zephyr-3.5-update
-    uses: petejohanson/zmk/.github/workflows/build-user-config.yml@core/move-to-zephyr-4-1
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
